--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clone Facebook</title>
     
-    <!-- Icone barra de navegação -->
+    <!-- Icon barra de navegação -->
     <link rel="shortcut icon" href="img/facebook.ico" type="image/x-icon">
 
     <!-- Conexão output Tailwind css -->
@@ -33,16 +33,16 @@
                         </form>
                         <div class="flex flex-col divide-y divide-gray-400 text-center mt-2 md:mt-0">
                             <div class="pb-4 order-2 md:order-1">
-                                <a href="" class="text-blue-600 hover:underline">Esqueceu a senha?</a>
+                                <a href="#" class="text-blue-600 hover:underline">Esqueceu a senha?</a>
                             </div>
                             <div class="pb-6 pt-8 order-1 md:order-2">
-                                <a href="" class="py-3 px-4 bg-main-green hover:bg-main-green-hover text-white text-md md:text-lg font-bold rounded">Criar nova conta</a>
+                                <a href="#" class="py-3 px-4 bg-main-green hover:bg-main-green-hover text-white text-md md:text-lg font-bold rounded">Criar nova conta</a>
                             </div>
                         </div>
                     </div>
                     
                     <div class="hidden md:block text-sm mt-5 text-center">
-                        <p><a href="" class="font-bold">Criar uma Página</a> para uma celebridade, banda ou empresa.</p>
+                        <p><a href="#" class="font-bold">Criar uma Página</a> para uma celebridade, banda ou empresa.</p>
                     </div>
                 </div>
             </div>
@@ -55,23 +55,23 @@
             <div>
                 <ul class="grid grid-cols-2 md:flex text-gray-600 text-xs md:text-sm">
                     <li class="mr-3">
-                        <a href="" class="hover:underline">Português (Brazil)</a>
+                        <a href="#" class="hover:underline">Português (Brazil)</a>
                     </li>
 
                     <li class="mr-3">
-                        <a href="" class="hover:underline">English (US)</a>
+                        <a href="#" class="hover:underline">English (US)</a>
                     </li>
 
                     <li class="mr-3">
-                        <a href="" class="hover:underline">Español</a>
+                        <a href="#" class="hover:underline">Español</a>
                     </li>
 
                     <li class="mr-3">
-                        <a href="" class="hover:underline">Français (France)</a>
+                        <a href="#" class="hover:underline">Français (France)</a>
                     </li>
 
                     <li class="mr-3">
-                        <a href="" class="hover:underline">Italiano</a>
+                        <a href="#" class="hover:underline">Italiano</a>
                     </li>
                 </ul>
             </div>
@@ -79,123 +79,119 @@
                 <div>
                     <ul class="hidden md:flex md:flex-wrap text-gray-600 text-sm">
                         <li class="mr-3">
-                            <a href="" class="hover:underline">Cadastre-se</a>
+                            <a href="#" class="hover:underline">Cadastre-se</a>
                         </li>
 
                         <li class="mr-3">
-                            <a href="" class="hover:underline">Entar</a>
+                            <a href="#" class="hover:underline">Entar</a>
                         </li>
 
                         <li class="mr-3">
-                            <a href="" class="hover:underline">Messenger</a>
+                            <a href="#" class="hover:underline">Messenger</a>
                         </li>
 
                         <li class="mr-3">
-                            <a href="" class="hover:underline">Facebook Lite</a>
+                            <a href="#" class="hover:underline">Facebook Lite</a>
                         </li>
 
                         <li class="mr-3">
-                            <a href="" class="hover:underline">Watch</a>
+                            <a href="#" class="hover:underline">Watch</a>
                         </li>
 
                         <li class="mr-3">
-                            <a href="" class="hover:underline">Pessoas</a>
+                            <a href="#" class="hover:underline">Pessoas</a>
                         </li>
 
                         <li class="mr-3">
-                            <a href="" class="hover:underline">Páginas</a>
+                            <a href="#" class="hover:underline">Páginas</a>
                         </li>
 
                         <li class="mr-3">
-                            <a href="" class="hover:underline">Categorias de páginas</a>
+                            <a href="#" class="hover:underline">Categorias de páginas</a>
                         </li>
 
                         <li class="mr-3">
-                            <a href="" class="hover:underline">Locais</a>
+                            <a href="#" class="hover:underline">Locais</a>
                         </li>
 
                         <li class="mr-3">
-                            <a href="" class="hover:underline">Jogos</a>
+                            <a href="#" class="hover:underline">Jogos</a>
                         </li>
 
                         <li class="mr-3">
-                            <a href="" class="hover:underline">Marketplace</a>
+                            <a href="#" class="hover:underline">Marketplace</a>
                         </li>
 
                         <li class="mr-3">
-                            <a href="" class="hover:underline">Facebook play</a>
+                            <a href="#" class="hover:underline">Facebook play</a>
                         </li>
 
                         <li class="mr-3">
-                            <a href="" class="hover:underline">Grupos</a>
+                            <a href="#" class="hover:underline">Grupos</a>
                         </li>
 
                         <li class="mr-3">
-                            <a href="" class="hover:underline">Oculos</a>
+                            <a href="#" class="hover:underline">Oculos</a>
                         </li>
 
                         <li class="mr-3">
-                            <a href="" class="hover:underline">Portal</a>
+                            <a href="#" class="hover:underline">Instagram</a>
                         </li>
 
                         <li class="mr-3">
-                            <a href="" class="hover:underline">Instagram</a>
+                            <a href="#" class="hover:underline">Local</a>
                         </li>
 
                         <li class="mr-3">
-                            <a href="" class="hover:underline">Local</a>
+                            <a href="#" class="hover:underline">Campanhas de arrecadação de fundos</a>
                         </li>
 
                         <li class="mr-3">
-                            <a href="" class="hover:underline">Campanhas de arrecadação de fundos</a>
+                            <a href="#" class="hover:underline">Serviços</a>
                         </li>
 
                         <li class="mr-3">
-                            <a href="" class="hover:underline">Serviços</a>
+                            <a href="#" class="hover:underline">Central de informações de Votação</a>
                         </li>
 
                         <li class="mr-3">
-                            <a href="" class="hover:underline">Central de informações de Votação</a>
+                            <a href="#" class="hover:underline">Sobre</a>
                         </li>
 
                         <li class="mr-3">
-                            <a href="" class="hover:underline">Sobre</a>
+                            <a href="#" class="hover:underline">Criar anúncios</a>
                         </li>
 
                         <li class="mr-3">
-                            <a href="" class="hover:underline">Criar anúncios</a>
+                            <a href="#" class="hover:underline">Criar página</a>
                         </li>
 
                         <li class="mr-3">
-                            <a href="" class="hover:underline">Criar página</a>
+                            <a href="#" class="hover:underline">Desenvolvedores</a>
                         </li>
 
                         <li class="mr-3">
-                            <a href="" class="hover:underline">Desenvolvedores</a>
+                            <a href="#" class="hover:underline">Carreiras</a>
                         </li>
 
                         <li class="mr-3">
-                            <a href="" class="hover:underline">Carreiras</a>
+                            <a href="#" class="hover:underline">Privacidade</a>
                         </li>
 
                         <li class="mr-3">
-                            <a href="" class="hover:underline">Privacidade</a>
+                            <a href="#" class="hover:underline">Cookies</a>
                         </li>
 
                         <li class="mr-3">
-                            <a href="" class="hover:underline">Cookies</a>
+                            <a href="#" class="hover:underline">Ecolha para anúncios</a>
                         </li>
 
                         <li class="mr-3">
-                            <a href="" class="hover:underline">Ecolha para anúncios</a>
+                            <a href="#" class="hover:underline">Termos</a>
                         </li>
 
                         <li class="mr-3">
-                            <a href="" class="hover:underline">Termos</a>
-                        </li>
-
-                        <li class="mr-3">
-                            <a href="" class="hover:underline">Ajuda</a>
+                            <a href="#" class="hover:underline">Ajuda</a>
                         </li>
                     </ul>
                 </div>
